Add react to the base

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "esnext",
     "lib": ["es2018", "webworker"],
     "jsx": "react",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "preserveConstEnums": true,
     "outDir": "./dist",
     "moduleResolution": "node",
