--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^16.8.16",
+    "@types/react-dom": "^16.8.4",
     "awesome-typescript-loader": "^5.2.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "serverless-cloudflare-workers": "^1.2.0",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
